--- a/mercury.cbp
+++ b/mercury.cbp
@@ -35,6 +35,9 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="printGrid.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="switchLetter.c">
 			<Option compilerVar="CC" />
 		</Unit>
